# lens

./: .gitignore  PLAN.org  README.md  batch_process.sh  batch_remaining.sh  extract_subs.py  main.py  process_subs.py  pyproject.toml
player/: package-lock.json  package.json
player/src/: App.tsx  types.ts
player/src/components/: EpisodeSelector.tsx  SubtitleBar.tsx  SubtitleWord.tsx  VideoControls.tsx  VideoPlayer.tsx
player/src/hooks/: useSubtitleSync.ts
test/: haiku_test_prompt.md  test_paddle_ocr.py
